# wechat_analysis

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_html_from_json.py  generate_html_simple.py  performance_report.json  pyproject.toml  run.py  test_report.html  update_room_names.py  可视化测试结果表格.html  可视化测试结果表格.md  可视化测试结果表格.xlsx  可视化测试结果表格_重构版.md  技术文档.md  技术方案.md  接口交接文档.md  接口说明文档.md  系统架构图.md  系统测试报告.md  部署上线SOP.md  需求文档.md  项目总结.md
.trae/specs/fix-dashboard-header-pdf-overflow/: checklist.md  spec.md  tasks.md
api/: main.py
api/routes/: __init__.py  analyze.py  dashboard.py  report.py  visualize.py
api/static/: index.html  index2.html
config/: settings.py
data/: custom_dict.txt  stopwords.txt
docs/: API接口说明文档.md  aftersaler_mapping_migration.sql  dashboard_performance_indexes.sql
models/: __init__.py  request.py  response.py
services/: __init__.py  _report_sections.py  aftersaler_mapping.py  data_archiver.py  data_collector.py  db_dashboard.py  highfreq.py  preprocessor.py  qxchat_analyzer.py  qxchat_helper.py  report_aggregator.py  report_generator.py  sensitive.py  sentiment.py  summary.py  unanswered.py
tests/: test-small.json  test_aftersaler_mapping.py  test_batch_analyze.py  test_dashboard.py  test_integration.py  test_llm.py  test_system_performance.py  test_unanswered.py  test_with_real_data.py  测试步骤.md
utils/: llm_client.py
