[project]
name = "wechat-analysis-service"
version = "1.0.0"
description = "企业微信客户群聊智能分析服务"
requires-python = ">=3.11"

dependencies = [
    "pymysql>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "jieba>=0.42.1",
    "pyahocorasick>=2.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.0",
    "openai>=1.0.0",
    "dashscope>=1.25.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "services", "models", "config", "utils"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
